--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>_app PLAYAS_</title>
     
     <!-- Path to your custom app styles-->
+    <link rel="stylesheet" href="dist/css/framework7.ios.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/my-app.css">
     <link rel="stylesheet" href="css/icomoon.css">
