--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <input name="nick" id="nick" type="text" placeholder="Nick">
                     <input name="email" id="email" type="text" placeholder="Email">
                 </div>
-                <div class="row no-gutter">
+                <div >
                   <input class="submit" type="submit" value="Enviar">
                 </div>
               </form>
