--- a/index.html
+++ b/index.html
@@ -397,14 +397,10 @@ map.setCenter(
 
                     <div id="map"></div>
                     <canvas></canvas>
-    <script>
 
-    
-   
-    </script>
-    <script async defer
+   <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxjkDTqarZuUpYLOVYid6sG6LTZ_3RI9c&callback=initMap">
-    </script>
+    </script>-->
                 </div>
               
               </div>
