--- a/index.html
+++ b/index.html
@@ -396,11 +396,14 @@ map.setCenter(
                     -->
 
                     <div id="map"></div>
-                    <canvas></canvas>
+    <script>
 
-   <!-- <script async defer
+    
+   
+    </script>
+    <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxjkDTqarZuUpYLOVYid6sG6LTZ_3RI9c&callback=initMap">
-    </script>-->
+    </script>
                 </div>
               
               </div>
