--- a/index.html
+++ b/index.html
@@ -401,9 +401,9 @@ map.setCenter(
     
    
     </script>
-    <script async defer
+    <!--<script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCxjkDTqarZuUpYLOVYid6sG6LTZ_3RI9c&callback=initMap">
-    </script>
+    </script>-->
                 </div>
               
               </div>
