--- a/index.html
+++ b/index.html
@@ -155,12 +155,13 @@
                         <canvas></canvas>
                       </div>-->
                     </div>
-                    <div class="takePick">
-                      <input id="file" type="file" accept="image/*">
-                      <!--<button id="chooseFile"><i class="fa fa-camera-retro fa-lg"></i></button>-->
+                    <!--<div class="takePick">
+                      
+                      <button id="chooseFile"><i class="fa fa-camera-retro fa-lg"></i></button>
                       <div id="preview"></div>
                       <ul id="info" data-role="listview" data-inset="true"></ul>
-                    </div>
+                    </div>-->
+                    <input id="file" type="file" accept="image/*">
                   </div>
                   <div class="col-50">
                     <select name="pais" id="pais">
