--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 
                     <div class="takePick">
                       <input type="file" name="upload"/>
+                      <div id="preview"></div>
                     </div>
                   </div>
                   <div class="col-50">
