--- a/index.html
+++ b/index.html
@@ -148,23 +148,18 @@
                 <div class="titulo-form"><h4>CREA TU PERFIL</h4></div>
                 <div class="row no-gutter">
                   <div class="col-50">
-                    <!--<div data-role="content">
+                    <div data-role="content">
                       <div class="hiddenfile" style="display:none">
                         <input type="file"  data-clear-btn="false" name="image" id="image" accept="image/*" capture>
                         
                         <canvas></canvas>
                       </div>
-                    </div>-->
-                    <!--<div class="takePick">
+                    </div>
+                    <div class="takePick">
                       
-                      <button id="chooseFile"><i class="fa fa-camera-retro fa-lg"></i></button>
+                      <button id="chooseFile"></button>
                       <div id="preview"></div>
                       <ul id="info" data-role="listview" data-inset="true"></ul>
-                    </div>-->
-
-                    <div class="takePick">
-                      <input type="file" name="upload"/>
-                      <div id="preview"></div>
                     </div>
                   </div>
                   <div class="col-50">
