--- a/index.html
+++ b/index.html
@@ -149,17 +149,18 @@
                 <div class="row no-gutter">
                   <div class="col-50">
                     <div data-role="content">
-                      <div class="hiddenfile" style="display:none">
+                      <!--<div class="hiddenfile" style="display:none">
                         <input type="file"  data-clear-btn="false" name="image" id="image" accept="image/*" capture>
                         
                         <canvas></canvas>
-                      </div>
+                      </div>-->
                     </div>
                     <div class="takePick">
                       
-                      <button id="chooseFile"></button>
+                      <!--<button ></button>-->
+                      <input type="file" data-clear-btn="false" name="image" id="image" accept="image/*" capture>
                       <div id="preview"></div>
-                      <ul id="info" data-role="listview" data-inset="true"></ul>
+                      <!--<ul id="info" data-role="listview" data-inset="true"></ul>-->
                     </div>
                   </div>
                   <div class="col-50">
