--- a/index.html
+++ b/index.html
@@ -242,12 +242,15 @@
                               }
                             },
                           success: function(form){
-                            //alert('formulario');
+                            alert('success');
                           },
                           submitHandler: function(form) {
+                            alert('submit');
                             guardoDatos();
                           }
                       });
+
+                    
                   });
               </script>
 
