--- a/index.html
+++ b/index.html
@@ -242,15 +242,12 @@
                               }
                             },
                           success: function(form){
-                            alert('success');
+                            //alert('formulario');
                           },
                           submitHandler: function(form) {
-                            alert('submit');
                             guardoDatos();
                           }
                       });
-
-                    
                   });
               </script>
 
